--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,208 +1,128 @@
+@charset "UTF-8";
 @font-face {
   font-family: "MiFuenteLocal";
   src: url("../FUENTES/consola.ttf") format("truetype");
 }
+.navbar-nav {
+  display: flex;
+  justify-content: center;
+  align-items: left;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
 
-  nav ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  }
+.navbar-nav .nav-item {
+  margin: 0 50px;
+  font-size: 18px;
+  color: #1d222e;
+}
 
-  nav li {
-    display: inline-block;
-    margin-right: 10px;
-  }
-
-
-  .container {
-    margin-left: 239px;
-    display: flex;
-    align-items: center;
-    
-  }
-  
-  
-  .logo {
-    margin-left: 20px; 
+.container {
+  display: flex;
+  align-items: center;
 }
 
 .logo img {
-    width: 100px;
+  width: 50px;
+  margin-right: 50px;
 }
-  
-  
-  
-  body {
-    background-color: #1d222e;
-    font-family: "MiFuenteLocal";
-    color: #FFF;
-  }
 
-  .main-content {
-    flex: 1;
-  }
-  
-  .redes-items {
-    display: flex;
-    justify-content: center; 
-    list-style: none; 
-    padding: 0;
-    font-size: 30px; 
-  }
-  
-  .redes-item {
-    margin: 0 55px;
-  }
-  
-  .redes-items li:not(:last-child) {
-    margin-right: 100px;
-  }
-
-  .redes-container {
-    background-color: #D9D9D9;
-    width: 1203px;
-    height: 101px;
-    border-radius: 0px;
-    padding: 10px;
-    margin: 10px;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    color: #1d222e;
-  }
-
-  .menu-container {
-    background-color: #D9D9D9;
-    width: 1203px;
-    height: 101px;
-    border-radius: 0px;
-    padding: 10px;
-    margin: 10px;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-  }
-
-  .menu-item {
-    background-color: #1d222e;
-    color: #FFF;
-    border-radius: 10px;
-    padding: 10px;
-    margin-right: 39px;
-  }
-
-  .menu-item:last-child {
-    margin-right: 0;
-  }
-
-  .menu-item a {
-    color: #FFF;
-    font-weight: bold;
-    text-decoration: none;
-  }
-
-  #tienda {
-    margin: 0px;
-    padding: 50px;
-    display: grid;
-    justify-content: center;
-    grid-template-columns: 200px 200px 200px 200px;
-    grid-template-rows: 200px 200px;
-    background-color: #1d222e;
+body {
+  background-color: #1d222e;
+  font-family: "MiFuenteLocal";
+  color: #FFF;
+  margin: 10px;
 }
-  
-  #tienda figure img {
-    width: 100%;
-    transition: all 300ms;
-    height: 100%;
-    object-fit: cover;
-    padding: auto;
-    position: relative;
+
+.main-content {
+  flex: 1;
+}
+
+#tienda {
+  margin: 0px;
+  padding: 50px;
+  display: grid;
+  justify-content: center;
+  grid-template-columns: 200px 200px 200px 200px;
+  grid-template-rows: 200px 200px;
+  background-color: #1d222e;
+}
+
+#tienda figure img {
+  width: 100%;
+  transition: all 300ms;
+  height: 100%;
+  object-fit: cover;
+  padding: auto;
+  position: relative;
 }
 
 #tienda figure img:hover {
-    transform: scale(1.05);
+  transform: scale(1.05);
 }
 
 .fotonico {
-  width: 300px; 
+  width: 300px;
   height: 180;
+  border: 3px solid #FFF;
 }
- 
+
 .fotococo {
-  width: 300px; 
+  width: 300px;
   height: 180px;
+  border: 3px solid #FFF;
 }
 
 .fotomateo {
-  width: 300px; 
+  width: 300px;
   height: auto;
+  border: 3px solid #FFF;
 }
+
 .fotomia {
-  width: 1000px; 
+  width: 1000px;
   height: auto;
   margin: 20px;
 }
 
-
-.flex-container{
-  /*Activamos flex*/
+.flex-container {
   display: flex;
-  /*definimos cual va  ser nuestro Main axis y cual, o si será fila o columna*/
   flex-direction: row;
-  /*dispone los elementos flexibles en el eje principal*/
   justify-content: flex-start;
-  /*dispone los elementos flexibles en el eje secundario*/
-  /* align-items: center; */
-  /*defino el desborde de los flex items*/
   flex-wrap: wrap;
-  /* align-content: space-evenly; */
-
-  /*Boxmodeling*/
-  padding: 20px;
-  margin: 20px;
   width: 1400px;
   height: 250px;
 }
 
-.caja{
-  /*box modeling*/
-  width: 300px;
+.caja {
+  width: 30px;
   height: 180px;
-  border: 3px solid #ffffff;
-  margin: 25px;
-
-  /*tipografia*/
+  margin: 20px;
   color: #fff;
   font-weight: bold;
   text-align: center;
+  align-items: first baseline;
 }
 
-/*propiedades de los flex items*/
-
-.c1{
-  /*defino el órden de aparición*/
-  margin-left: 0px;
-  width: 200px;
+.c1 {
+  width: 300px;
   height: 180px;
   order: 1;
-
 }
 
-.c2{
-  width: 200px;
+.c2 {
+  width: 300px;
   height: 180px;
   order: 2;
 }
 
-.c3{
-  width: 200px;
+.c3 {
+  width: 300px;
   height: 180px;
   order: 3;
 }
 
-.c4{
+.c7 {
   width: 300px;
   height: 500px;
   order: 4;
@@ -212,21 +132,25 @@
   margin-top: 10px;
 }
 
-.fotonico1{
-  width: 200px;
+.fotonico1 {
+  width: 300px;
   height: auto;
+  border: 3px solid #FFF;
 }
 
-.fotococo1{
-  width: 200px;
+.fotococo1 {
+  width: 300px;
   height: auto;
-}
-.fotomateo1{
-  width: 200px;
-  height: auto;
+  border: 3px solid #FFF;
 }
 
-.elclub{
+.fotomateo1 {
+  width: 300px;
+  height: auto;
+  border: 3px solid #FFF;
+}
+
+.elclub {
   width: 450px;
   height: 260px;
   order: 1;
@@ -235,106 +159,91 @@
   margin-top: 10px;
 }
 
-.fotorafa{
+.fotorafa {
   width: 450px;
   height: auto;
   order: 1;
   border: 3px solid #ffffff;
+  margin-top: 20px;
 }
 
-.historia{
-  width: 600px;
-  height: 500px;
-  order: 3;
-  font-size: 20px;
-  text-align: left;
-  
+.sede {
+  width: 450px;
+  height: auto;
+  order: 1;
+  border: 3px solid #ffffff;
+  margin-top: 40px;
 }
 
-.rectanguloq{
-  width: 10px;
-  height: 415px;
-  order: 2;
-  background-color: #ffffff;
-  margin-left: 50px;
-  margin-right: 50px;
-
-}
-
-.noticias{
+.noticias {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
 }
 
-.grid-container{
-  width: 90%;
-  max-width: 1000px;
-  border: 10px solid #ffffff;
-  margin: auto;
-  text-align: center;
-  display: grid;
-  grid-template-columns: 200px 200px 200px;
-  column-gap: 200px;
-
-  grid-template-areas: 
-  "header header header";
-}
-
-.img-fluid{
+.img-fluid {
   border: 3px solid #FFF;
+  margin-top: 50px;
 }
 
-li{
-  margin-bottom: 12px
+li {
+  margin-bottom: 12px;
 }
 
-
-
+.grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); /* Ajusta el número de columnas automáticamente */
+  gap: 20px;
+}
 
 #ft1 {
-
-    margin: 3px;
-    grid-column: 1/2;
-    grid-row: 1/3;
+  margin: 3px;
+  grid-column: 1/2;
+  grid-row: 1/3;
 }
 
 #ft2 {
-    margin: 3px;
-    grid-column: 2/3;
-    grid-row: 1/2;
+  margin: 3px;
+  grid-column: 2/3;
+  grid-row: 1/2;
 }
 
 #ft3 {
-    margin: 3px;
-    grid-column: 3/5;
-    grid-row: 1/2;
+  margin: 3px;
+  grid-column: 3/5;
+  grid-row: 1/2;
 }
 
 #ft4 {
-    margin: 3px;
-    grid-column: 2/4;
-    grid-row: 2/3;
+  margin: 3px;
+  grid-column: 2/4;
+  grid-row: 2/3;
 }
 
 #ft5 {
-    margin: 3px;
-    grid-column: 4/5;
-    grid-row: 2/3;
+  margin: 3px;
+  grid-column: 4/5;
+  grid-row: 2/3;
 }
 
-#video{
-margin: 20px;
-text-align: left;
-}
-#video h1{
-    letter-spacing: 2px;
-
+#video {
+  text-align: center; /* Centrar el contenido horizontalmente */
 }
 
+.video-container {
+  display: flex;
+  justify-content: center; /* Centrar el contenido horizontalmente */
+  max-width: 100%;
+  overflow: hidden; /* Evitar que el video desborde el contenedor */
+}
 
-h1{
+.video-container iframe {
+  width: 100%;
+  height: auto;
+}
+
+h1 {
   margin: 20px;
   font-size: 50px;
 }
@@ -343,7 +252,6 @@ article a {
   background-color: var(--colorRojo);
   color: white;
   text-transform: uppercase;
-
 }
 
 article a:hover {
@@ -351,91 +259,42 @@ article a:hover {
   color: white;
 }
 
-.navbar {
-  font-weight: 600;
-  width: 1440px;
-  height: 101px;
-  border-radius: 0px;
-  padding: 0PX;
-  margin-top: 50px;
-  display: flex;
-  justify-content: flex-start;
-  margin-left: 0;
-  margin-right: 200px;
-  display: flex;
-  align-items: center;
-
-}
-
-.nav-link {
-    background-color:#1d222e;
-    color: #FFF;
-    border-radius: 10px;
-    padding: 10px; 
-    padding: 10px;
-    margin: 0 10px;
-    color: #ffffff !important;
-    }
-
-
-.navbar .nav-link:hover {
-  border-bottom: 1px solid;
-  border-top: 1px solid;
-}
-
 .active {
-  border-bottom: 1px solid  !important;
-  border-top: 1px solid  !important;
+  border-bottom: 1px solid !important;
+  border-top: 1px solid !important;
 }
 
-.navbar-toggler,
-.navbar-toggler:focus {
-  outline: none;
-  border: none;
-  background-color:  transparent;
+.footer-text {
+  color: #1d222e;
 }
 
-@media screen and (max-width: 480px){
-  .rectanguloq {
-    width: 415px;
-    height: 10px;
-    order: 2;
-    background-color: #ffffff;
-    margin-left: 100px;
-    margin-right: 50px;
-    
-  }
-  
-}
 @media (max-width: 480px) {
-  /* Estilos para el footer en móvil */
-  footer {
-    background-color: #f0f0f0; 
-    padding: 10px; 
-    position: fixed; 
-    bottom: 0; 
-    width: 100%; 
+  .menu-container {
+    flex-direction: column;
   }
-
-  /* Estilos para el contenido dentro del footer */
-  .redes-container {
-    width: 100%; 
-    background-color: #D9D9D9; 
-    text-align: center; 
+  .menu-list {
+    display: none;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    position: absolute;
+    top: 60px;
+    right: 0;
+    background-color: #ffffff;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    padding: 10px;
+    display: none;
   }
-
-  .redes-items {
-    display: flex;
-    justify-content: center;
-    padding: 20px 0; 
-    position: fixed;
-    width: 100%; /
-    bottom: 0; 
+  .menu-icon {
+    display: block;
   }
-.fotorafa{
-  width: 100%;
-  max-width: 100%;
-  padding: 0;
-  margin: 0 auto;
+  .menu-container.active .menu-list {
+    display: block;
+  }
+  .container {
+    text-align: center;
+  }
 }
-}
+
+/*# sourceMappingURL=estilos.css.map */
