--- a/css/estilos.css
+++ b/css/estilos.css
@@ -160,7 +160,7 @@ body {
 }
 
 .fotorafa {
-  width: 450px;
+  width: 430px;
   height: auto;
   order: 1;
   border: 3px solid #ffffff;
@@ -168,7 +168,7 @@ body {
 }
 
 .sede {
-  width: 450px;
+  width: 430px;
   height: auto;
   order: 1;
   border: 3px solid #ffffff;
@@ -193,8 +193,9 @@ li {
 
 .grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); /* Ajusta el número de columnas automáticamente */
-  gap: 20px;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 10px;
+  max-width: 100%;
 }
 
 #ft1 {
@@ -225,6 +226,52 @@ li {
   margin: 3px;
   grid-column: 4/5;
   grid-row: 2/3;
+}
+
+
+.container-intercalado {
+  width: 100%;
+  height: 140px;
+  display: flex;
+  justify-content: space-between;
+  background-color: #fff; 
+  align-items: center; 
+  padding: 10px;
+  position: relative;
+  border: 3px solid #ffffff;                         
+}
+
+.container-intercalado:nth-child(even) .descripcion {
+  color: #1d222e; 
+  font-size: 25px;
+}
+
+.container-intercalado:nth-child(odd) {
+  background-color: #1d222e;
+  color: #ffffff;
+  font-size: 25px;
+}
+
+
+.descripcion {
+  color: #ffffff;
+  text-align: right;
+  width: calc(100% - 120px); 
+  margin-left: 50px;
+}
+
+
+.imagen-contenedor {
+  width: 90px;
+  height: 90px;
+  background-color: #333;
+  position: absolute;
+  left: 30px; 
+  transform: translateY(-50%); 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: 50%; 
 }
 
 #video {
@@ -268,7 +315,7 @@ article a:hover {
   color: #1d222e;
 }
 
-@media (max-width: 480px) {
+@media (max-width: 500px) {
   .menu-container {
     flex-direction: column;
   }
@@ -297,4 +344,13 @@ article a:hover {
   }
 }
 
-/*# sourceMappingURL=estilos.css.map */
+.grid {
+  grid-template-columns: repeat(auto-fit, minmax(100%, 1fr)); 
+}
+
+.grid img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
